--- a/src/course/en/components.json
+++ b/src/course/en/components.json
@@ -109,7 +109,7 @@
         "_classes": "",
         "_layout": "left",
         "title": "Introduction",
-        "displayTitle": "Introduction",
+        "displayTitle": "Introduction M1",
         "body": "This module will focus on:<ul><li>Why people struggle with collaborative working</li><li>The values and behavioural standards expected by your organisation</li><li>The pro-social aspects of collaborative behaviour</li><li>The benefits of an emotionally intelligent approach to collaboration</li><li>Recognising our reactions and behaviours in collaborative situations</li></ul>",
         "instruction": "",
         "_pageLevelProgress": {
